added tool for reasoning

--- a/book.bib
+++ b/book.bib
@@ -807,3 +807,9 @@ publisher={University of Prince Edward Island}
   year={2006},
   publisher={Open Court Publishing}
 }
+
+@article{giere2006understanding,
+  title={Understanding scientific reasoning},
+  author={Giere, Ronald N and Bickle, John and Mauldin, Robert F},
+  year={2006}
+}
