improved explanation section

--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -1386,7 +1386,7 @@ Particular Facts (explanans)
 Phenomenon to be explained (explanandum)
 \end{verbatim}
 
-An interesting consequence of this model lays in the relationship between explanation and prediction. Hempel argued that these are two sides of the same coin. Whenever a phenomenon is explained with the help of a covering law, the laws and the particular facts we use could have allowed us to predict the occurrence of the phenomenon. Hempel expressed this by saying that every scientific explanation is potentially a prediction. Hempel argued that the opposite is also true: every prediction is potentially an explanation. \textbf{For Hempel, explanation and prediction are structurally symmetric}. For instance, the same information we could use to predict an animal species extinction before it happened will serve to explain that very same fact after it has happened.
+An interesting consequence of this model lays in the relationship between explanation and prediction. \textbf{Hempel argued that explanation and prediction are two sides of the same coin}. Whenever a phenomenon is explained with the help of a covering law, the laws and the particular facts we use could have allowed us to predict the occurrence of the phenomenon. Hempel expressed this by saying that every scientific explanation is potentially a prediction. Hempel argued that the opposite is also true: every prediction is potentially an explanation. \textbf{For Hempel, explanation and prediction are structurally symmetric}. For instance, the same information we could use to predict an animal species extinction before it happened will serve to explain that very same fact after it has happened.
 
 
 
@@ -1421,8 +1421,117 @@ Particular Fact  (Sun's angle of elevation is 37°)
 Phenomenon to be explained (Flagpole is 15 metres high)
 \end{verbatim}
 
-The moral of this example is that the concept of explanation showcases an important \textbf{asymmetry}. The length of the shadow can be explained by the height of the flagpole, given aforementioned general laws. But this does not happen in the other direction. In general, if \(x\) explains \(y\), then it will not be true that \(y\) explains \(x\) given the same laws and facts. Explanation is then an asymetric relation and Hempel's covering law model does not respect such asymmetry. Information that allow us to predict a fact before we know it does not serve to explain that very same fact after we know it, which \textbf{contradicts Hempel's thesis}.
+The moral of this example is that the concept of explanation showcases an important \textbf{asymmetry}. The length of the shadow can be explained by the height of the flagpole, given aforementioned general laws. But this does not happen in the other direction. In general, if \(x\) explains \(y\), then it will not be true that \(y\) explains \(x\) given the same laws and facts. \textbf{Explanation is then an asymetric relation and Hempel's covering law model does not respect such asymmetry}. Information that allow us to predict a fact before we know it does not serve to explain that very same fact after we know it, which \textbf{contradicts Hempel's thesis}.
+
 The general conclusion is that a good explanation of a phenomenon should contain information that is relevant to the phenomenon's occurrence.
+
+\subsection{Hempel's model limitations}\label{hempels-model-limitations}
+
+We can summarise Hempel's view as follows:
+
+\begin{itemize}
+\tightlist
+\item
+  Hempel proposed that scientific explanations answer why-questions using a logical argument.
+\item
+  The structure of an explanation resembles a deductive argument, consisting of explanans (premises including at least one general law and specific facts) and an explanandum (the phenomenon to be explained).
+\item
+  For Hempel, a valid scientific explanation must be a deductive and sound argument; contain at least one general law of nature; have empirically testable premises; use true statement.
+\item
+  Hempel held that explanation and prediction are structurally symmetric.
+\end{itemize}
+
+However, his model is too liberal.
+
+\begin{itemize}
+\tightlist
+\item
+  It considers ``explanations'' many arguments that don't really explain (e.g., the flagpole-shadow example).
+\item
+  The model treats explanation and prediction as equivalent, but in reality, they are asymmetric (knowing the shadow length doesn't explain the pole's height).
+\item
+  Ignores causality: The model focuses on logical form, not on causal relationships.
+\item
+  Relevance problem: Explanations must contain information relevant to the phenomenon (explanandum); Hempel's model doesn't ensure this.
+\item
+  No directionality: It doesn't distinguish between causes and effects; causality is one-directional, but deduction is symmetric.
+\item
+  Empiricist skepticism of causality: Hempel, influenced by Hume, downplayed causal reasoning, yet most explanations are causal in nature.
+\end{itemize}
+
+The covering-law model was foundational but incomplete: it motivated the causal-mechanistic turn in philosophy of science. A good explanation should provide relevant information about why the event occurred, not just a correlation or logical entailment.
+
+\subsection{Modern views}\label{modern-views}
+
+Because the covering-law model treated explanation as mere deduction from general laws, it failed to capture how scientists actually explain phenomena through causal or mechanistic reasoning. Contemporary models emphasize that explaining is not just showing that an event fits under a law, but showing why it occurs, by revealing the underlying causal mechanisms, counterfactual dependencies, and contextual relevance that make the phenomenon intelligible.
+
+\begin{itemize}
+\tightlist
+\item
+  Causal-Mechanistic Turn:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Explanation moved from logical form to causal relevance and counterfactuals.
+  \item
+    Focus on causal relevance and counterfactual dependence.
+  \item
+    To explain = to show how changing X would change Y.
+  \item
+    Causation tied to manipulability and intervention (e.g., Pearl's causal diagrams).
+  \end{itemize}
+\item
+  Mechanistic Models (esp.~in biology \& medicine):
+
+  \begin{itemize}
+  \tightlist
+  \item
+    ``To explain is to describe a mechanism''.
+  \item
+    Explanation shows how entities and activities are organised to produce a phenomenon.
+  \item
+    Mechanisms replace general laws in complex domains.
+  \item
+    In complex sciences, general laws are rare but mechanisms are abundant.
+  \end{itemize}
+\item
+  Unificationist and Pragmatic Views:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Unification: explanation means showing how diverse phenomena fit under a few general patterns (e.g., Newton's laws unify celestial motion).
+  \item
+    Pragmatic: explanation is context-dependent, addressing why A happened rather than B, for a given audience or contrast.
+  \end{itemize}
+\item
+  Pluralism in Explanation:
+
+  \begin{itemize}
+  \tightlist
+  \item
+    There is no single canonical model today.
+  \item
+    Different sciences adopt different explanatory ideals:
+
+    \begin{itemize}
+    \tightlist
+    \item
+      Physics: laws and mathematical deduction.
+    \item
+      Biology/Medicine: mechanisms and probabilities.
+    \end{itemize}
+  \end{itemize}
+\item
+  Modern consensus
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Explanation implies revealing the causal, probabilistic, or structural dependencies that make a phenomenon understandable within scientific practice.
+  \end{itemize}
+\end{itemize}
 
 \subsection{Explanation and causality}\label{explanation-and-causality}
 
@@ -2288,9 +2397,7 @@ The following content is important for the mid-term exam. More examples will com
 
 \end{notebox}
 
-This tool should help you spotting what assumptions were made, how evidence was connected to theory, whether the conclusions follow logically. This program or tool, comes from the book ``Understanding scientific reasoning'' from Ronald N. Giere, John Bickle and Robert F. Mauldin \citep{giere2006understanding}.
-
-The following schema is a tool for evaluating whether a scientific model seems to fit the world, doesn't fit, or remains uncertain. It is a systematic way to identify the main components:
+This tool should help you spotting what assumptions were made, how evidence was connected to theory, whether the conclusions follow logically. This program or tool, comes from the book ``Understanding scientific reasoning'' from Ronald N. Giere, John Bickle and Robert F. Mauldin \citep{giere2006understanding}. The following schema is a tool for evaluating whether a scientific model seems to fit the world, doesn't fit, or remains uncertain. It is a systematic way to identify the main components:
 
 \begin{itemize}
 \tightlist
@@ -2320,7 +2427,7 @@ The tool reduces the process of evaluating reports involving theoretical models 
 \item
   \textbf{Step 4: Data}. Identify the actual observations or experimental results reported, e.g., ``DNA analysis shows the turtles have been distinct for only tens of thousands of years''.
 \item
-  \textbf{Step 5: Negative Evidence?} Do the data and prediction agree? If no then, negative evidence, the model likely does not fit the real world. If yes, go to step 6.
+  \textbf{Step 5: Negative Evidence?} Do the data and prediction agree? If no then, negative evidence, the model likely does not fit the real world. Otherwise, step 6.
 \item
   \textbf{Step 6: Positive Evidence?} Would the prediction likely be true even if the model were wrong? If no, then positive evidence: the data support the model. For instance, ``Subjects guessed 90 \% correctly. This is unlikely by chance. Then, supports model''. If yes, then other plausible models could also explain the data (inconclusive). For instance, ``Warm decade could occur naturally. then, our data is inconclusive''.
 \end{itemize}
