--- a/03-ScientificInference.Rmd
+++ b/03-ScientificInference.Rmd
@@ -569,9 +569,9 @@ knitr::asis_output('\\begin{wrapfigure}{R}{.25\\textwidth}
 \\addtocounter{figure}{-1}')
 ```
 
-At this point, many of you probably have already related data science to two of the goals of science: explanation and prediction. But how do they relate to one another? and what is a scientific explanation? Either to satisfy our natural curiosity or for a further purpose, science has always attempted to understand how the world works. The German philosopher Carl Hempel attempted to answer this question in the 1950s with what is known as the *covering law* model of explanation. He stated that a scientific explanation is an answer given in response to *explanation-seeking why-questions* (e.g. why salt dissolves in water).
+At this point, many of you probably have already related data science to two of the goals of science: explanation and prediction. But how do they relate to one another? and what is a scientific explanation? Either to satisfy our natural curiosity or for a further purpose, science has always attempted to understand how the world works. The German philosopher Carl Hempel attempted to answer this question in the 1950s with what is known as the *covering law* model of explanation. He stated that a scientific explanation is an answer given in response to *explanation-seeking why-questions* (e.g. why salt dissolves in water). **In this section, we will first present Hempel’s model, then discuss its main problems, and finally explore modern causal and mechanistic views of explanation**.
 
-According to Hempel, explanations are structured like an argument, i.e. a set of premises followed by a conclusion. Therefore, the conclusion of such an argument states that certain phenomenon occurs, e.g. "salt dissolves in water". On the other hand, the premises indicate why the conclusion is true. Then, the challenge lays in the relationship that should follow between such premises and the conclusion. For Hempel, the premises should all be true and entail the conclusion, i.e. the argument should be deductive and *sound*. Additionally, the premises should contain at least one general law (e.g. all metals conduct electricity), a.k.a. *laws of nature*. The name of the model comes from that fact that the phenomenon to be explained is "covered" by some general law.
+According to Hempel, explanations are structured like an argument, i.e. a set of premises followed by a conclusion. Therefore, the conclusion of such an argument states that certain phenomenon occurs, e.g. "salt dissolves in water". On the other hand, the premises indicate why the conclusion is true. Then, the challenge lays in the relationship that should follow between such premises and the conclusion. For Hempel, the premises should all be true and entail the conclusion, i.e. the argument should be deductive and *sound*. Additionally, the premises should contain at least one general law (e.g. all metals conduct electricity), also known as *laws of nature*. The name of the model comes from that fact that the phenomenon to be explained is "covered" by some general law.
 
 1. The *explanandum* must be a valid deductive argument.
 2. The *explanans* must contain at least one general law actually needed in the deduction.
@@ -587,13 +587,15 @@ Particular Facts (explanans)
 Phenomenon to be explained (explanandum)
 ```
 
-An interesting consequence of this model lays in the relationship between explanation and prediction. Hempel argued that these are two sides of the same coin. Whenever a phenomenon is explained with the help of a covering law, the laws and the particular facts we use could have allowed us to predict the occurrence of the phenomenon. Hempel expressed this by saying that every scientific explanation is potentially a prediction. Hempel argued that the opposite is also true: every prediction is potentially an explanation. **For Hempel, explanation and prediction are structurally symmetric**. For instance, the same information we could use to predict an animal species extinction before it happened will serve to explain that very same fact after it has happened.
+An interesting consequence of this model lies in the relationship between explanation and prediction. **Hempel argued that explanation and prediction are two sides of the same coin**. Whenever a phenomenon is explained with the help of a covering law, the laws and the particular facts we use could have allowed us to predict the occurrence of the phenomenon. Hempel expressed this by saying that every scientific explanation is potentially a prediction. Hempel argued that the opposite is also true: every prediction is potentially an explanation. **For Hempel, explanation and prediction are structurally symmetric**. For instance, the same information we could use to predict an animal species extinction before it happened will serve to explain that very same fact after it has happened.
 
 (ref:flagpole-okasha) A 15-metre flagpole casts a shadow of 20 metres when the sun is 37° overhead. Figure from [@okasha-pos].
 
 ```{r flagpole, echo=F, out.width="75%", fig.align="center", fig.cap='(ref:flagpole-okasha)'}
 knitr::include_graphics('Figures/flagpole.png')
 ```
+
+### Limitations of Hempel's model
 
 Hempel's model might be too liberal, as it faces a number of odd counterexamples. For example, consider Figure \@ref(fig:flagpole). In order to explain why the shadow is 20 metres long. Indeed, this is a *explanation-seeking why-question* and a possible answer could be the following: The light rays from the sun hit the flagpole (15 metres high), the sun's elevation angle is 37° and light travels in straight lines. The trigonometric calculation $tan(37°) = 15/20$ demonstrates that the flagpole will cast a shadow of 20 metres long. This example can be found in both [@rosenberg2019philosophy] and [@okasha-pos].
 
@@ -617,22 +619,74 @@ Particular Fact  (Sun's angle of elevation is 37°)
 Phenomenon to be explained (Flagpole is 15 metres high)
 ```
 
-The moral of this example is that the concept of explanation showcases an important **asymmetry**. The length of the shadow can be explained by the height of the flagpole, given aforementioned general laws. But this does not happen in the other direction. In general, if $x$ explains $y$, then it will not be true that $y$ explains $x$ given the same laws and facts. Explanation is then an asymetric relation and Hempel's covering law model does not respect such asymmetry. Information that allow us to predict a fact before we know it does not serve to explain that very same fact after we know it, which **contradicts Hempel's thesis**.
-The general conclusion is that a good explanation of a phenomenon should contain information that is relevant to the phenomenon's occurrence.
+The moral of this example is that the concept of explanation showcases an important **asymmetry**. The length of the shadow can be explained by the height of the flagpole, given aforementioned general laws. But this does not happen in the other direction. In general, if $x$ explains $y$, then it will not be true that $y$ explains $x$ given the same laws and facts. **Explanation is then an asymmetric relation and Hempel's covering law model does not respect such asymmetry**. Information that allow us to predict a fact before we know it does not serve to explain that very same fact after we know it, which **contradicts Hempel's thesis**.
+
+The general conclusion is that a good explanation of a phenomenon should contain information that is relevant to the phenomenon's occurrence. Hempel’s model left unanswered why some explanations feel more informative than others. Philosophers and scientists increasingly turned toward causation as the missing ingredient: what truly makes an explanation explanatory.
 
 ### Explanation and causality
 
-There are alternatives to the covering law model that help us understanding scientific explanation. For many, explaining a phenomenon is simply to say what caused it. Obviously, causality is also an asymmetric relation. If a faulty appliance caused a fire, then is clear that the fire did not cause the appliance's failure. The asymmetry of explanation derives from the asymmetry of causality. 
+There are alternatives to the covering law model that help us understand what counts as scientific explanation. For many, explaining a phenomenon is simply to say what caused it. Obviously, causality is also an asymmetric relation. If a faulty appliance caused a fire, then it is clear that the fire did not cause the appliance's failure. The asymmetry of explanation derives from the asymmetry of causality. 
 
 However, the criticism against Hempel covering law is a bit unfair as he was an empiricist. Empiricists are sceptical about the concept of causality and argue that all our knowledge comes from experience. David Hume argued that is impossible to experience causal relations, and that causality is just what we humans project to understand the world.
 
-There are however some examples were explanation and causality do not match. For example, to say that an object's temperature is the average kinetic energy of its molecules is to explain what temperature *is*, but this does not yield the cause of such temperature.
+There are however some examples where explanation and causality do not align For example, to say that an object's temperature is the average kinetic energy of its molecules is to explain what temperature *is*, but this does not yield the cause of such temperature.
 
 The law $PV = nRT.$ explains the temperature of a gas at equilibrium by appeal to its pressure and the volume it takes up. But volume and pressure cannot be *causes* of temperature since all of them — the temperature, the volume, and the pressure — vary, in the way the law describes, instantaneously. The changes in volume at one time do not cause changes in temperature at a later time; instead, the change in temperature occurs during exactly the same interval that pressure is changing [@rosenberg2019philosophy]. The nature of causation is still an open debate, but most philosophers have agreed that causes somehow necessitate their effects and that mere regularity cannot express this necessity.
 
 Another example, this time from [@book-of-why], show us the gap between causal vocabulary and ordinary scientific vocabulary. Consider the problem of expressing the following causal relationship: The barometer reading $B$ tracks the atmospheric pressure $P$. We can write down the relationship as $B = kP$, where $k$ is a constant of proportionality. Thanks to algebra we can rewrite the equation in multiple ways such as: $P = B/k$, $k = B/P$, or $B-kP = 0$. They mean the same and given two of the variables we can calculate the third. But in these equations there is no account of directionality. We cannot express that is the pressure which *causes* the barometer to change and not the other way around. Similarly, we cannot express the fact that the singing of the rooster *does not cause* the sun to rise. Why have scientists not captured such facts in formulas as is done in other areas like mechanics, geometry or optics? For a better understanding of causation and its role in data science I recommend you the Book of Why [@book-of-why].
 
 > Data can tell you that the people who took a medicine recovered faster than those who did not take it, but they can't tell you why. --- Book of Why
+
+### Summary and modern views
+
+We can summarise Hempel's view as follows:
+
+- Hempel proposed that scientific explanations answer why-questions using a logical argument.
+- The structure of an explanation resembles a deductive argument, consisting of explanans (premises including at least one general law and specific facts) and an explanandum (the phenomenon to be explained).
+- For Hempel, a valid scientific explanation must be a deductive and sound argument; contain at least one general law of nature; have empirically testable premises; use true statement.
+- Hempel held that explanation and prediction are structurally symmetric.
+
+In short, Hempel’s model helped formalize scientific explanation, but it faces key limitations: 
+
+- It considers "explanations" many arguments that don’t really explain (e.g., the flagpole-shadow example). 
+- The model treats explanation and prediction as equivalent, but in reality, they are asymmetric (knowing the shadow length doesn’t explain the pole’s height).
+- Ignores causality: The model focuses on logical form, not on causal relationships.
+- Relevance problem: Explanations must contain information relevant to the phenomenon (explanandum); Hempel’s model doesn’t ensure this.
+- No directionality: It doesn’t distinguish between causes and effects; causality is one-directional, but deduction is symmetric.
+- Empiricist skepticism of causality: Hempel, influenced by Hume, downplayed causal reasoning, yet most explanations are causal in nature.
+
+The covering-law model was foundational, but incomplete: it motivated the causal-mechanistic turn in philosophy of science. A good explanation should provide relevant information about why the event occurred, not just a correlation or logical entailment.
+
+Because the covering-law model treated explanation as mere deduction from general laws, it failed to capture how scientists actually explain phenomena through causal or mechanistic reasoning. Contemporary models emphasize that explaining is not just showing that an event fits under a law, but showing why it occurs, by revealing the underlying causal mechanisms, counterfactual dependencies, and contextual relevance that make the phenomenon intelligible.
+
+- Causal-Mechanistic Turn:
+  - Explanation moved from logical form to causal relevance and counterfactuals.
+  - Focus on causal relevance and counterfactual dependence.
+  - To explain = to show how changing X would change Y.
+  - Causation tied to manipulability and intervention (e.g., Pearl’s causal diagrams).
+
+- Mechanistic Models (esp. in biology & medicine):
+  - "To explain is to describe a mechanism".
+  - Explanation shows how entities and activities are organised to produce a phenomenon.
+  - Mechanisms replace general laws in complex domains.
+  - In complex sciences, general laws are rare but mechanisms are abundant.
+
+- Unificationist and Pragmatic Views:
+  - Unification: explanation means showing how diverse phenomena fit under a few general patterns (e.g., Newton’s laws unify celestial motion).
+  - Pragmatic: explanation is context-dependent, addressing why A happened rather than B, for a given audience or contrast.
+
+- Pluralism in Explanation:
+  - There is no single canonical model today.
+  - Different sciences adopt different explanatory ideals:
+    - Physics: laws and mathematical deduction.
+    - Biology/Medicine: mechanisms and probabilities.
+
+- Modern consensus
+  - Explanation implies revealing the causal, probabilistic, or structural dependencies that make a phenomenon understandable within scientific practice.
+  
+In sum, while Hempel’s covering-law model provided the first systematic account of scientific explanation, its neglect of causality, asymmetry, and context opened the path for contemporary approaches that view explanation as revealing the mechanisms, dependencies, and conditions that make phenomena intelligible rather than merely deducible.
+
+In data science, explanatory and predictive goals often overlap but differ in purpose: prediction seeks accuracy about future observations, whereas explanation seeks understanding of why they occur. Both, however, depend on our ability to uncover the underlying structures—logical, causal, or mechanistic—that connect data to the world
 
 
 :::: {.tipbox data-latex=""}
