--- a/book.bib
+++ b/book.bib
@@ -163,13 +163,13 @@ edition = {1st},
 }
 
 @InCollection{sep-induction-problem,
-	author       =	{Henderson, Leah},
+  author       =	{Henderson, Leah},
 	title        =	{{The Problem of Induction}},
 	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
-	editor       =	{Edward N. Zalta},
-	howpublished =	{\url{https://plato.stanford.edu/archives/spr2020/entries/induction-problem/}},
-	year         =	{2020},
-	edition      =	{{S}pring 2020},
+	editor       =	{Edward N. Zalta and Uri Nodelman},
+	howpublished =	{\url{https://plato.stanford.edu/archives/win2024/entries/induction-problem/}},
+	year         =	{2024},
+	edition      =	{{W}inter 2024},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
 
@@ -364,6 +364,16 @@ edition = {1st},
   publisher={St. Martin's Press}
 }
 
+@InCollection{sep-justep-coherence,
+	author       =	{Olsson, Erik},
+	title        =	{{Coherentist Theories of Epistemic Justification}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta and Uri Nodelman},
+	howpublished =	{\url{https://plato.stanford.edu/archives/fall2025/entries/justep-coherence/}},
+	year         =	{2025},
+	edition      =	{{F}all 2025},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
 
 
 
@@ -812,4 +822,22 @@ publisher={University of Prince Edward Island}
   title={Understanding scientific reasoning},
   author={Giere, Ronald N and Bickle, John and Mauldin, Robert F},
   year={2006}
+}
+
+@article{ortner2023adaptive,
+  title={Adaptive Algorithms for Meta-Induction},
+  author={Ortner, Ronald},
+  journal={Journal for General Philosophy of Science},
+  volume={54},
+  number={3},
+  pages={433--450},
+  year={2023},
+  publisher={Springer}
+}
+
+@book{mayo1996error,
+  title={Error and the growth of experimental knowledge},
+  author={Mayo, Deborah G},
+  year={1996},
+  publisher={University of Chicago Press}
 }
